# photrez

./: .cursorrules  .editorconfig  .env.example  .gitignore  .mcp.json  .opencode.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  GEMINI.md  GOVERNANCE.md  KNOWN_ISSUES.md  LICENSE  NOTICE  PRODUCT.md  README.md  SECURITY.md  TRADEMARKS.md  measure-perf.ps1  opencode.json  package.json  pnpm-lock.yaml  setup-env.ps1  test-output.txt  test-output2.txt
.agent/tests/: check-antigravity-profile.sh
.antigravitycli/: 2ea8f7f5-d082-4fb4-9a68-126849f396bb.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  release.yml
.gsd/archive/: 10-ai-execution-playbook.md  12-agent-context-pack.md
.husky/: commit-msg  pre-commit  pre-push
.impeccable/: design.json
.impeccable/critique/: 2026-06-21T14-12-43Z__pps-desktop-src-components-editor-historypanel-tsx.md
apps/desktop/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  cursor.rs  main.rs  menu.rs  response.rs  window_state.rs
crates/core/: Cargo.toml
crates/core/src/: brush.rs  document.rs  export.rs  history.rs  layers.rs  lib.rs  selection.rs  transform.rs  workspace.rs
docs/: 00-product-scope.md  01-id-decision-log.md  01-prd.md  02-architecture.md  03-trd.md  04-erd-or-data-model.md  07-build-plan.md  08-milestone-1-execution.md  09-public-release-gate.md  10-b-desktop-behavior-spec.md  13-risk-register.md  15-command-contract-spec.md  16-performance-measurement-protocol.md  17-test-matrix-by-milestone.md  20-github-actions-m1-template.md  21-m1-command-mapping-checklist.md  22-ui-style-guide.md  23-design-tokens.md  24-ui-component-rules.md  25-ui-style-guide-preview.html  26-wireframe-layout-spec.md  30-ui-full-editor-mockup.html  31-dependency-inventory.md  32-keyboard-shortcut-map.md  33-file-format-support.md  34-save-and-document-lifecycle.md  35-error-code-registry.md  36-glossary.md  38-usable-mvp-recovery-plan.md  AI_CONTEXT.md  AI_CURRENT_TASK.md  AI_HISTORY.md  ARCHITECTURE.md  AUDIT_REPORT.md  CONVENTIONS.md  DEEP_AUDIT_REPORT.md  DEEP_PROJECT_REVIEW.md  FEATURES.md  INDEX.md  PERF_UX_AUDIT_REPORT.md  (+4 more)
scripts/: fix-mojibake.ts  performance-budget.mjs
target_test/: .rustc_info.json
(+869 files in other folders)
