[package]
name = "photrez-desktop"
version = "0.2.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Desktop application for Photrez powered by Tauri"
repository = "https://github.com/rahmanqolbi/photrez"


[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-dialog = "2"
base64 = "0.22"
zip = { version = "2.2.0", default-features = false, features = ["deflate"] }
open = "5"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dev-dependencies]
tauri = { version = "2.0.0", features = ["test"] }
